--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,21 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(main src/main.cpp
-        src/Renderer.cpp
-        src/Renderer.h
-        src/RoundedRectangleShape.cpp
-        src/RoundedRectangleShape.h)
+add_executable(main src/src/main.cpp
+        src/src/Renderer.cpp
+        src/include/Renderer.h
+        src/src/RoundedRectangleShape.cpp
+        src/include/RoundedRectangleShape.h
+        src/src/Ball.cpp
+        src/include/Ball.h
+        src/src/Paddle.cpp
+        src/include/Paddle.h
+        src/src/Block.cpp
+        src/include/Block.h
+        src/src/Updater.cpp
+        src/include/Updater.h
+        src/src/Game.cpp
+        src/include/Game.h)
 target_compile_features(main PRIVATE cxx_std_17)
 target_link_libraries(main PRIVATE SFML::Graphics)
 
